--- a/index.html
+++ b/index.html
@@ -19,52 +19,62 @@
           ><span class="navigation-logo-web">Web</span>Studio</a
         >
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="#" class="header-nav-btn">Studio</a></li>
+          <li><a href="#" class="header-nav-btn">Portfolio</a></li>
+          <li><a href="#" class="header-nav-btn">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address">
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-nav"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="address-nav"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!-- Section Hero -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-banner">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">
+          <span class="hero-button-active">Order Service</span>
+        </button>
       </section>
       <!-- Section feature -->
       <section>
-        <h2>Feature</h2>
-        <ul>
+        <h2 class="feature">Feature</h2>
+        <ul class="feature-lists">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,39 +82,39 @@
         </ul>
       </section>
       <!-- Section Our Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section-team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/Mark.jpg" alt="photo Mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-members-names">Mark Guerrero</h3>
+            <p class="team-members-positions">Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom.jpg" alt="photo Tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-members-names">Tom Ford</h3>
+            <p class="team-members-positions">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/Gamila.jpg" alt="photo Gamila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-members-names">Camila Garcia</h3>
+            <p class="team-members-positions">Marketing</p>
           </li>
           <li>
             <img src="./images/Daniel.jpg" alt="photo Daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-members-names">Daniel Wilson</h3>
+            <p class="team-members-positions">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Section Our Portfolio -->
       <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
           <li>
             <img src="./images/Banking.jpg" alt="banking App" width="264" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-list-title">Banking App</h3>
+            <p class="portfolio-about-app">App</p>
           </li>
           <li>
             <img
@@ -112,8 +122,8 @@
               alt="Cashless Payment"
               width="264"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <p class="portfolio-about-app">Marketing</p>
           </li>
           <li>
             <img
@@ -121,13 +131,13 @@
               alt="Meditation App"
               width="264"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Meditation App</h3>
+            <p class="portfolio-about-app">App</p>
           </li>
           <li>
             <img src="./images/Taxi.jpg" alt="Taxi Service" width="264" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <p class="portfolio-about-app">Marketing</p>
           </li>
           <li>
             <img
@@ -135,20 +145,23 @@
               alt="Screen Illustrations"
               width="264"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <p class="portfolio-about-app">Design</p>
           </li>
           <li>
             <img src="./images/Courses.jpg" alt="Online Courses" width="264" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-list-title">Online Courses</h3>
+            <p class="portfolio-about-app">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="navigation-logo"
+        ><span class="navigation-logo-web">Web</span
+        ><span class="navigation-logo-studio">Studio</span></a
+      >
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
