--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
       <!-- Section Hero -->
       <section class="hero-banner">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">
-          <span class="hero-button-active">Order Service</span>
-        </button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <!-- Section feature -->
       <section>
