--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="navigation-logo"
-          ><span class="navigation-logo-web">Web</span>Studio</a
+          >Web<span class="navigation-logo-header">Studio</span></a
         >
         <ul>
-          <li><a href="#" class="header-nav-btn">Studio</a></li>
-          <li><a href="#" class="header-nav-btn">Portfolio</a></li>
-          <li><a href="#" class="header-nav-btn">Contacts</a></li>
+          <li><a href="./index.html" class="header-nav-btn">Studio</a></li>
+          <li><a href="" class="header-nav-btn">Portfolio</a></li>
+          <li><a href="" class="header-nav-btn">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="address">
+      <address class="address">
+        <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="address-nav"
               >info@devstudio.com</a
@@ -84,22 +84,30 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li>
-            <img src="./images/Mark.jpg" alt="photo Mark" width="264" />
+            <img src="./images/Mark.jpg" alt="photo Mark" class="team-img" />
             <h3 class="team-members-names">Mark Guerrero</h3>
             <p class="team-members-positions">Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom.jpg" alt="photo Tom" width="264" />
+            <img src="./images/Tom.jpg" alt="photo Tom" class="team-img" />
             <h3 class="team-members-names">Tom Ford</h3>
             <p class="team-members-positions">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Gamila.jpg" alt="photo Gamila" width="264" />
+            <img
+              src="./images/Gamila.jpg"
+              alt="photo Gamila"
+              class="team-img"
+            />
             <h3 class="team-members-names">Camila Garcia</h3>
             <p class="team-members-positions">Marketing</p>
           </li>
           <li>
-            <img src="./images/Daniel.jpg" alt="photo Daniel" width="264" />
+            <img
+              src="./images/Daniel.jpg"
+              alt="photo Daniel"
+              class="team-img"
+            />
             <h3 class="team-members-names">Daniel Wilson</h3>
             <p class="team-members-positions">UI Designer</p>
           </li>
@@ -156,8 +164,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="navigation-logo"
-        ><span class="navigation-logo-web">Web</span
-        ><span class="navigation-logo-studio">Studio</span></a
+        >Web<span class="navigation-logo-footer">Studio</span></a
       >
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
