--- a/index.html
+++ b/index.html
@@ -82,32 +82,24 @@
       <!-- Section Our Team -->
       <section class="section-team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li>
-            <img src="./images/Mark.jpg" alt="photo Mark" class="team-img" />
+        <ul>
+          <li class="team-list">
+            <img src="./images/Mark.jpg" width="360" alt="photo Mark" />
             <h3 class="team-members-names">Mark Guerrero</h3>
             <p class="team-members-positions">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/Tom.jpg" alt="photo Tom" class="team-img" />
+          <li class="team-list">
+            <img src="./images/Tom.jpg" width="360" alt="photo Tom" />
             <h3 class="team-members-names">Tom Ford</h3>
             <p class="team-members-positions">Frontend Developer</p>
           </li>
-          <li>
-            <img
-              src="./images/Gamila.jpg"
-              alt="photo Gamila"
-              class="team-img"
-            />
+          <li class="team-list">
+            <img src="./images/Gamila.jpg" width="360" alt="photo Gamila" />
             <h3 class="team-members-names">Camila Garcia</h3>
             <p class="team-members-positions">Marketing</p>
           </li>
-          <li>
-            <img
-              src="./images/Daniel.jpg"
-              alt="photo Daniel"
-              class="team-img"
-            />
+          <li class="team-list">
+            <img src="./images/Daniel.jpg" width="360" alt="photo Daniel" />
             <h3 class="team-members-names">Daniel Wilson</h3>
             <p class="team-members-positions">UI Designer</p>
           </li>
