--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
         <h2 class="team-title">Our Team</h2>
         <ul>
           <li class="team-list">
-            <img src="./images/Mark.jpg" width="360" alt="photo Mark" />
+            <img src="./images/Mark.jpg" width="264" alt="photo Mark" />
             <h3 class="team-members-names">Mark Guerrero</h3>
             <p class="team-members-positions">Product Designer</p>
           </li>
           <li class="team-list">
-            <img src="./images/Tom.jpg" width="360" alt="photo Tom" />
+            <img src="./images/Tom.jpg" width="264" alt="photo Tom" />
             <h3 class="team-members-names">Tom Ford</h3>
             <p class="team-members-positions">Frontend Developer</p>
           </li>
           <li class="team-list">
-            <img src="./images/Gamila.jpg" width="360" alt="photo Gamila" />
+            <img src="./images/Gamila.jpg" width="264" alt="photo Gamila" />
             <h3 class="team-members-names">Camila Garcia</h3>
             <p class="team-members-positions">Marketing</p>
           </li>
           <li class="team-list">
-            <img src="./images/Daniel.jpg" width="360" alt="photo Daniel" />
+            <img src="./images/Daniel.jpg" width="264" alt="photo Daniel" />
             <h3 class="team-members-names">Daniel Wilson</h3>
             <p class="team-members-positions">UI Designer</p>
           </li>
@@ -110,15 +110,15 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li>
-            <img src="./images/Banking.jpg" alt="banking App" width="264" />
+            <img src="./images/Banking.jpg" width="360" alt="banking App" />
             <h3 class="portfolio-list-title">Banking App</h3>
             <p class="portfolio-about-app">App</p>
           </li>
           <li>
             <img
               src="./images/Payment.jpg"
+              width="360"
               alt="Cashless Payment"
-              width="264"
             />
             <h3 class="portfolio-list-title">Cashless Payment</h3>
             <p class="portfolio-about-app">Marketing</p>
@@ -126,28 +126,28 @@
           <li>
             <img
               src="./images/Meditation.jpg"
+              width="360"
               alt="Meditation App"
-              width="264"
             />
             <h3 class="portfolio-list-title">Meditation App</h3>
             <p class="portfolio-about-app">App</p>
           </li>
           <li>
-            <img src="./images/Taxi.jpg" alt="Taxi Service" width="264" />
+            <img src="./images/Taxi.jpg" width="360" alt="Taxi Service" />
             <h3 class="portfolio-list-title">Taxi Service</h3>
             <p class="portfolio-about-app">Marketing</p>
           </li>
           <li>
             <img
               src="./images/Illustrations.jpg"
+              width="360"
               alt="Screen Illustrations"
-              width="264"
             />
             <h3 class="portfolio-list-title">Screen Illustrations</h3>
             <p class="portfolio-about-app">Design</p>
           </li>
           <li>
-            <img src="./images/Courses.jpg" alt="Online Courses" width="264" />
+            <img src="./images/Courses.jpg" width="360" alt="Online Courses" />
             <h3 class="portfolio-list-title">Online Courses</h3>
             <p class="portfolio-about-app">Marketing</p>
           </li>
